deployment/k8s-demo/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  namespace: default
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      name: myapp
  template:
    metadata:
      labels:
        name: myapp
      namespace: default
    spec:
      containers:
        - name: myapp
          image: registry.cn-hangzhou.aliyuncs.com/huskyui/k8s-boot-demo:latest
          ports:
            - containerPort: 8080
