deployment/k8s-demo/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
        - path: /welcome
          backend:
            serviceName: myapp-service
            servicePort: 8080
